--- a/package.json
+++ b/package.json
@@ -35,6 +35,13 @@
     "node": "^0.12.7"
   },
   "devDependencies": {
-    "grunt-browser-sync": "^2.1.3"
+    "grunt-browser-sync": "^2.1.3",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-htmlmin": "^0.5.0",
+    "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-replace": "^0.11.0",
+    "grunt-combine-media-queries": "^1.0.19"
   }
 }
